--- a/_site.yml
+++ b/_site.yml
@@ -4,9 +4,12 @@ description: |
   EDLD 652
 output_dir: "docs"
 navbar:
-  right:
+  left:
     - text: "Home"
       href: index.html
     - text: "About"
       href: about.html
+  right:
+    - icon: fa fa-github
+      href: https://github.com/datalorax/blog-ex
 output: distill::distill_article
