--- a/_site.yml
+++ b/_site.yml
@@ -13,3 +13,4 @@ navbar:
     - icon: fa fa-github
       href: https://github.com/datalorax/blog-ex
 output: distill::distill_article
+theme: style.css
